--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -42,7 +42,7 @@
         </script>
     </h:head>
     <h:body>
-        <p:growl autoUpdate="true"/>
+        <p:growl id="messages"  widgetVar="growlWidget" autoUpdate="true"/>
         <h:outputText id="validationFailed" style="display: none;"
                       value="#{facesContext.validationFailed}"/>
         <h:panelGroup id="indexPanel" layout="block"
